--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "appflags-node",
   "version": "1.1.2",
   "description": "Node SDK for AppFlags.io",
+  "homepage": "https://github.com/AppFlags/node-sdk",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "directories": {
